--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,3 @@
-.topnavbar {
-  background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  font-size: calc(10px + 2vmin);
-  font-family: cursive;
-  color: whitesmoke;
-}
-
-.navbar {
-  justify-content: "space-between";
-  align-items: flex-start;
-}
-
 .body {
   background-color: whitesmoke;
   color: black;
@@ -23,13 +7,14 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   margin-top: 10px;
+  margin-left: 130px;
 }
 
 input {
   margin-top: 80px;
-  width: 40%;
+  width: 35%;
   padding: 12px 20px;
   box-sizing: border-box;
 }
@@ -45,4 +30,30 @@ input {
   padding: 5px 25px 10px 25px;
   max-width: 25%;
   margin-left: 10%;
+}
+
+.navbar-nav {
+  font-size: x-large;
+  display: flex;
+  flex-direction: column;
+  padding-left: 55%;
+  list-style: none;
+}
+.navbar-brand {
+  display: inline-block;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: x-large;
+  line-height: inherit;
+  white-space: nowrap;
+}
+
+.logo {
+  font-weight: 400;
+}
+
+.shoppies {
+  font-family: "Homemade Apple", cursive;
+  font-size: 40px;
 }
