--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,8 @@ input {
   font-family: "Homemade Apple", cursive;
   font-size: 40px;
 }
+
+.cardsrch {
+  display: flex;
+  flex-direction: row;
+}
